Asgn4/y.output
Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | INT_CONSTANT
    3                   | FLOAT_CONSTANT
    4                   | CHAR_CONSTANT
    5                   | STRING_LITERAL
    6                   | LEFT_PARENTHESES expression RIGHT_PARANTHESES

    7 postfix_expression: primary_expression
    8                   | postfix_expression LEFT_SQUARE_BRACKET expression RIGHT_SQUARE_BRACKET
    9                   | postfix_expression LEFT_PARENTHESES argument_expression_list_opt RIGHT_PARANTHESES
   10                   | postfix_expression DOT IDENTIFIER
   11                   | postfix_expression ARROW IDENTIFIER
   12                   | postfix_expression INCREMENT
   13                   | postfix_expression DECREMENT
   14                   | LEFT_PARENTHESES typename RIGHT_PARANTHESES LEFT_CURLY_BRACE initializer_list RIGHT_CURLY_BRACE
   15                   | LEFT_PARENTHESES typename RIGHT_PARANTHESES LEFT_CURLY_BRACE initializer_list COMMA RIGHT_CURLY_BRACE

   16 argument_expression_list_opt: argument_expression_list
   17                             | ε

   18 argument_expression_list: assignment_expression
   19                         | argument_expression_list COMMA assignment_expression

   20 unary_expression: postfix_expression
   21                 | INCREMENT unary_expression
   22                 | DECREMENT unary_expression
   23                 | unary_operator cast_expression
   24                 | SIZEOF unary_expression
   25                 | SIZEOF LEFT_PARENTHESES typename RIGHT_PARANTHESES

   26 unary_operator: BITWISE_AND
   27               | ASTERISK
   28               | PLUS
   29               | MINUS
   30               | TILDE
   31               | EXCLAMATORY_MARK

   32 cast_expression: unary_expression
   33                | LEFT_PARENTHESES typename RIGHT_PARANTHESES cast_expression

   34 multiplicative_expression: cast_expression
   35                          | multiplicative_expression ASTERISK cast_expression
   36                          | multiplicative_expression FORWARD_SLASH cast_expression
   37                          | multiplicative_expression MODULO cast_expression

   38 additive_expression: multiplicative_expression
   39                    | additive_expression PLUS multiplicative_expression
   40                    | additive_expression MINUS multiplicative_expression

   41 shift_expression: additive_expression
   42                 | shift_expression LEFT_SHIFT additive_expression
   43                 | shift_expression RIGHT_SHIFT additive_expression

   44 relational_expression: shift_expression
   45                      | relational_expression LESS_THAN shift_expression
   46                      | relational_expression GREATER_THAN shift_expression
   47                      | relational_expression LESS_EQUAL shift_expression
   48                      | relational_expression GREATER_EQUAL shift_expression

   49 equality_expression: relational_expression
   50                    | equality_expression ISEQUAL relational_expression
   51                    | equality_expression NOTEQUAL relational_expression

   52 AND_expression: equality_expression
   53               | AND_expression BITWISE_AND equality_expression

   54 exclusive_OR_expression: AND_expression
   55                        | exclusive_OR_expression BITWISE_XOR AND_expression

   56 inclusive_OR_expression: exclusive_OR_expression
   57                        | inclusive_OR_expression BITWISE_OR exclusive_OR_expression

   58 logical_AND_expression: inclusive_OR_expression
   59                       | logical_AND_expression LOGICAL_AND inclusive_OR_expression

   60 logical_OR_expression: logical_AND_expression
   61                      | logical_OR_expression LOGICAL_OR logical_AND_expression

   62 conditional_expression: logical_OR_expression
   63                       | logical_OR_expression QUESTION_MARK expression COLON conditional_expression

   64 assignment_expression: conditional_expression
   65                      | unary_expression assignment_operator assignment_expression

   66 assignment_operator: EQUAL_TO
   67                    | MUL_ASSIGN
   68                    | DIV_ASSIGN
   69                    | MOD_ASSIGN
   70                    | ADD_ASSIGN
   71                    | SUB_ASSIGN
   72                    | LEFT_SHIFT_ASSIGN
   73                    | RIGHT_SHIFT_ASSIGN
   74                    | AND_ASSIGN
   75                    | XOR_ASSIGN
   76                    | OR_ASSIGN

   77 expression: assignment_expression
   78           | expression COMMA assignment_expression

   79 constant_expression: conditional_expression

   80 declaration: declaration_specifiers init_declarator_list_opt SEMICOLON

   81 init_declarator_list_opt: init_declarator_list
   82                         | ε

   83 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   84                       | type_specifier declaration_specifiers_opt
   85                       | type_qualifier declaration_specifiers_opt
   86                       | function_specifier declaration_specifiers_opt

   87 declaration_specifiers_opt: declaration_specifiers
   88                           | ε

   89 init_declarator_list: init_declarator
   90                     | init_declarator_list COMMA init_declarator

   91 init_declarator: declarator
   92                | declarator EQUAL_TO initializer

   93 storage_class_specifier: EXTERN
   94                        | STATIC
   95                        | AUTO
   96                        | REGISTER

   97 type_specifier: VOID
   98               | CHAR
   99               | SHORT
  100               | INT
  101               | LONG
  102               | FLOAT
  103               | DOUBLE
  104               | SIGNED
  105               | UNSIGNED
  106               | BOOL
  107               | COMPLEX
  108               | IMAGINARY
  109               | enum_specifier

  110 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  111                         | type_qualifier specifier_qualifier_list_opt

  112 specifier_qualifier_list_opt: specifier_qualifier_list
  113                             | ε

  114 enum_specifier: ENUM identifier_opt LEFT_CURLY_BRACE enumerator_list RIGHT_CURLY_BRACE
  115               | ENUM identifier_opt LEFT_CURLY_BRACE enumerator_list COMMA RIGHT_CURLY_BRACE
  116               | ENUM IDENTIFIER

  117 identifier_opt: IDENTIFIER
  118               | ε

  119 enumerator_list: enumerator
  120                | enumerator_list COMMA enumerator

  121 enumerator: IDENTIFIER
  122           | IDENTIFIER EQUAL_TO constant_expression

  123 type_qualifier: CONST
  124               | RESTRICT
  125               | VOLATILE

  126 function_specifier: INLINE

  127 declarator: pointer_opt direct_declarator

  128 pointer_opt: pointer
  129            | ε

  130 direct_declarator: IDENTIFIER
  131                  | LEFT_PARENTHESES declarator RIGHT_PARANTHESES
  132                  | direct_declarator LEFT_SQUARE_BRACKET type_qualifier_list_opt assignment_expression_opt RIGHT_SQUARE_BRACKET
  133                  | direct_declarator LEFT_SQUARE_BRACKET STATIC type_qualifier_list_opt assignment_expression RIGHT_SQUARE_BRACKET
  134                  | direct_declarator LEFT_SQUARE_BRACKET type_qualifier_list STATIC assignment_expression RIGHT_SQUARE_BRACKET
  135                  | direct_declarator LEFT_SQUARE_BRACKET type_qualifier_list_opt ASTERISK RIGHT_SQUARE_BRACKET
  136                  | direct_declarator LEFT_PARENTHESES parameter_type_list RIGHT_PARANTHESES
  137                  | direct_declarator LEFT_PARENTHESES identifier_list_opt RIGHT_PARANTHESES

  138 type_qualifier_list_opt: type_qualifier_list
  139                        | ε

  140 assignment_expression_opt: assignment_expression
  141                          | ε

  142 identifier_list_opt: identifier_list
  143                    | ε

  144 pointer: ASTERISK type_qualifier_list_opt
  145        | ASTERISK type_qualifier_list_opt pointer

  146 type_qualifier_list: type_qualifier
  147                    | type_qualifier_list type_qualifier

  148 parameter_type_list: parameter_list
  149                    | parameter_list COMMA ELLIPSIS

  150 parameter_list: parameter_declaration
  151               | parameter_list COMMA parameter_declaration

  152 parameter_declaration: declaration_specifiers declarator
  153                      | declaration_specifiers

  154 identifier_list: IDENTIFIER
  155                | identifier_list COMMA IDENTIFIER

  156 typename: specifier_qualifier_list

  157 initializer: assignment_expression
  158            | LEFT_CURLY_BRACE initializer_list RIGHT_CURLY_BRACE
  159            | LEFT_CURLY_BRACE initializer_list COMMA RIGHT_CURLY_BRACE

  160 initializer_list: designation_opt initializer
  161                 | initializer_list COMMA designation_opt initializer

  162 designation_opt: designation
  163                | ε

  164 designation: designator_list EQUAL_TO

  165 designator_list: designator
  166                | designator_list designator

  167 designator: LEFT_SQUARE_BRACKET constant_expression RIGHT_SQUARE_BRACKET
  168           | DOT IDENTIFIER

  169 statement: labeled_statement
  170          | compound_statement
  171          | expression_statement
  172          | selection_statement
  173          | iteration_statement
  174          | jump_statement

  175 labeled_statement: IDENTIFIER COLON statement
  176                  | CASE constant_expression COLON statement
  177                  | DEFAULT COLON statement

  178 compound_statement: LEFT_CURLY_BRACE block_item_list_opt RIGHT_CURLY_BRACE

  179 block_item_list_opt: block_item_list
  180                    | ε

  181 block_item_list: block_item
  182                | block_item_list block_item

  183 block_item: declaration
  184           | statement

  185 expression_statement: expression_opt SEMICOLON

  186 expression_opt: expression
  187               | ε

  188 selection_statement: IF LEFT_PARENTHESES expression RIGHT_PARANTHESES statement
  189                    | IF LEFT_PARENTHESES expression RIGHT_PARANTHESES statement ELSE statement
  190                    | SWITCH LEFT_PARENTHESES expression RIGHT_PARANTHESES statement

  191 iteration_statement: WHILE LEFT_PARENTHESES expression RIGHT_PARANTHESES statement
  192                    | DO statement WHILE LEFT_PARENTHESES expression RIGHT_PARANTHESES SEMICOLON
  193                    | FOR LEFT_PARENTHESES expression_opt SEMICOLON expression_opt SEMICOLON expression_opt RIGHT_PARANTHESES statement
  194                    | FOR LEFT_PARENTHESES declaration expression_opt SEMICOLON expression_opt RIGHT_PARANTHESES statement

  195 jump_statement: GOTO IDENTIFIER SEMICOLON
  196               | CONTINUE SEMICOLON
  197               | BREAK SEMICOLON
  198               | RETURN expression_opt SEMICOLON

  199 translation_unit: external_declaration
  200                 | translation_unit external_declaration

  201 external_declaration: function_definition
  202                     | declaration

  203 function_definition: declaration_specifiers declarator declaration_list_opt compound_statement

  204 declaration_list_opt: declaration_list
  205                     | ε

  206 declaration_list: declaration
  207                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENTIFIER <idval> (258) 1 10 11 116 117 121 122 130 154 155 168 175 195
    INT_CONSTANT <intval> (259) 2
    FLOAT_CONSTANT <floatval> (260) 3
    CHAR_CONSTANT <charval> (261) 4
    STRING_LITERAL <strval> (262) 5
    ARROW (263) 11
    INCREMENT (264) 12 21
    DECREMENT (265) 13 22
    SIZEOF (266) 24 25
    LEFT_SHIFT (267) 42
    RIGHT_SHIFT (268) 43
    LESS_EQUAL (269) 47
    GREATER_EQUAL (270) 48
    ISEQUAL (271) 50
    NOTEQUAL (272) 51
    LOGICAL_AND (273) 59
    LOGICAL_OR (274) 61
    MUL_ASSIGN (275) 67
    DIV_ASSIGN (276) 68
    MOD_ASSIGN (277) 69
    ADD_ASSIGN (278) 70
    SUB_ASSIGN (279) 71
    LEFT_SHIFT_ASSIGN (280) 72
    RIGHT_SHIFT_ASSIGN (281) 73
    AND_ASSIGN (282) 74
    XOR_ASSIGN (283) 75
    OR_ASSIGN (284) 76
    EXTERN (285) 93
    STATIC (286) 94 133 134
    AUTO (287) 95
    REGISTER (288) 96
    VOID (289) 97
    CHAR (290) 98
    SHORT (291) 99
    INT (292) 100
    LONG (293) 101
    FLOAT (294) 102
    DOUBLE (295) 103
    SIGNED (296) 104
    UNSIGNED (297) 105
    BOOL (298) 106
    COMPLEX (299) 107
    IMAGINARY (300) 108
    CONST (301) 123
    RESTRICT (302) 124
    VOLATILE (303) 125
    INLINE (304) 126
    ELLIPSIS (305) 149
    ENUM (306) 114 115 116
    CASE (307) 176
    DEFAULT (308) 177
    IF (309) 188 189
    ELSE (310) 189
    SWITCH (311) 190
    FOR (312) 193 194
    DO (313) 192
    WHILE (314) 191 192
    GOTO (315) 195
    CONTINUE (316) 196
    BREAK (317) 197
    RETURN (318) 198
    LEFT_PARENTHESES (319) 6 9 14 15 25 33 131 136 137 188 189 190 191 192 193 194
    RIGHT_PARANTHESES (320) 6 9 14 15 25 33 131 136 137 188 189 190 191 192 193 194
    DOT (321) 10 168
    COMMA (322) 15 19 78 90 115 120 149 151 155 159 161
    LEFT_SQUARE_BRACKET (323) 8 132 133 134 135 167
    RIGHT_SQUARE_BRACKET (324) 8 132 133 134 135 167
    LEFT_CURLY_BRACE (325) 14 15 114 115 158 159 178
    RIGHT_CURLY_BRACE (326) 14 15 114 115 158 159 178
    LESS_THAN (327) 45
    GREATER_THAN (328) 46
    EQUAL_TO (329) 66 92 122 164
    BITWISE_AND (330) 26 53
    BITWISE_OR (331) 57
    BITWISE_XOR (332) 55
    ASTERISK (333) 27 35 135 144 145
    FORWARD_SLASH (334) 36
    PLUS (335) 28 39
    MINUS (336) 29 40
    MODULO (337) 37
    TILDE (338) 30
    EXCLAMATORY_MARK (339) 31
    QUESTION_MARK (340) 63
    COLON (341) 63 175 176 177
    SEMICOLON (342) 80 185 192 193 194 195 196 197 198


Nonterminals, with rules where they appear

    $accept (88)
        on left: 0
    primary_expression (89)
        on left: 1 2 3 4 5 6
        on right: 7
    postfix_expression (90)
        on left: 7 8 9 10 11 12 13 14 15
        on right: 8 9 10 11 12 13 20
    argument_expression_list_opt (91)
        on left: 16 17
        on right: 9
    argument_expression_list (92)
        on left: 18 19
        on right: 16 19
    unary_expression (93)
        on left: 20 21 22 23 24 25
        on right: 21 22 24 32 65
    unary_operator (94)
        on left: 26 27 28 29 30 31
        on right: 23
    cast_expression (95)
        on left: 32 33
        on right: 23 33 34 35 36 37
    multiplicative_expression (96)
        on left: 34 35 36 37
        on right: 35 36 37 38 39 40
    additive_expression (97)
        on left: 38 39 40
        on right: 39 40 41 42 43
    shift_expression (98)
        on left: 41 42 43
        on right: 42 43 44 45 46 47 48
    relational_expression (99)
        on left: 44 45 46 47 48
        on right: 45 46 47 48 49 50 51
    equality_expression (100)
        on left: 49 50 51
        on right: 50 51 52 53
    AND_expression (101)
        on left: 52 53
        on right: 53 54 55
    exclusive_OR_expression (102)
        on left: 54 55
        on right: 55 56 57
    inclusive_OR_expression (103)
        on left: 56 57
        on right: 57 58 59
    logical_AND_expression (104)
        on left: 58 59
        on right: 59 60 61
    logical_OR_expression (105)
        on left: 60 61
        on right: 61 62 63
    conditional_expression (106)
        on left: 62 63
        on right: 63 64 79
    assignment_expression (107)
        on left: 64 65
        on right: 18 19 65 77 78 133 134 140 157
    assignment_operator (108)
        on left: 66 67 68 69 70 71 72 73 74 75 76
        on right: 65
    expression (109)
        on left: 77 78
        on right: 6 8 63 78 186 188 189 190 191 192
    constant_expression (110)
        on left: 79
        on right: 122 167 176
    declaration (111)
        on left: 80
        on right: 183 194 202 206 207
    init_declarator_list_opt (112)
        on left: 81 82
        on right: 80
    declaration_specifiers (113)
        on left: 83 84 85 86
        on right: 80 87 152 153 203
    declaration_specifiers_opt (114)
        on left: 87 88
        on right: 83 84 85 86
    init_declarator_list (115)
        on left: 89 90
        on right: 81 90
    init_declarator (116)
        on left: 91 92
        on right: 89 90
    storage_class_specifier (117)
        on left: 93 94 95 96
        on right: 83
    type_specifier (118)
        on left: 97 98 99 100 101 102 103 104 105 106 107 108 109
        on right: 84 110
    specifier_qualifier_list (119)
        on left: 110 111
        on right: 112 156
    specifier_qualifier_list_opt (120)
        on left: 112 113
        on right: 110 111
    enum_specifier (121)
        on left: 114 115 116
        on right: 109
    identifier_opt (122)
        on left: 117 118
        on right: 114 115
    enumerator_list (123)
        on left: 119 120
        on right: 114 115 120
    enumerator (124)
        on left: 121 122
        on right: 119 120
    type_qualifier (125)
        on left: 123 124 125
        on right: 85 111 146 147
    function_specifier (126)
        on left: 126
        on right: 86
    declarator (127)
        on left: 127
        on right: 91 92 131 152 203
    pointer_opt (128)
        on left: 128 129
        on right: 127
    direct_declarator (129)
        on left: 130 131 132 133 134 135 136 137
        on right: 127 132 133 134 135 136 137
    type_qualifier_list_opt (130)
        on left: 138 139
        on right: 132 133 135 144 145
    assignment_expression_opt (131)
        on left: 140 141
        on right: 132
    identifier_list_opt (132)
        on left: 142 143
        on right: 137
    pointer (133)
        on left: 144 145
        on right: 128 145
    type_qualifier_list (134)
        on left: 146 147
        on right: 134 138 147
    parameter_type_list (135)
        on left: 148 149
        on right: 136
    parameter_list (136)
        on left: 150 151
        on right: 148 149 151
    parameter_declaration (137)
        on left: 152 153
        on right: 150 151
    identifier_list (138)
        on left: 154 155
        on right: 142 155
    typename (139)
        on left: 156
        on right: 14 15 25 33
    initializer (140)
        on left: 157 158 159
        on right: 92 160 161
    initializer_list (141)
        on left: 160 161
        on right: 14 15 158 159 161
    designation_opt (142)
        on left: 162 163
        on right: 160 161
    designation (143)
        on left: 164
        on right: 162
    designator_list (144)
        on left: 165 166
        on right: 164 166
    designator (145)
        on left: 167 168
        on right: 165 166
    statement (146)
        on left: 169 170 171 172 173 174
        on right: 175 176 177 184 188 189 190 191 192 193 194
    labeled_statement (147)
        on left: 175 176 177
        on right: 169
    compound_statement (148)
        on left: 178
        on right: 170 203
    block_item_list_opt (149)
        on left: 179 180
        on right: 178
    block_item_list (150)
        on left: 181 182
        on right: 179 182
    block_item (151)
        on left: 183 184
        on right: 181 182
    expression_statement (152)
        on left: 185
        on right: 171
    expression_opt (153)
        on left: 186 187
        on right: 185 193 194 198
    selection_statement (154)
        on left: 188 189 190
        on right: 172
    iteration_statement (155)
        on left: 191 192 193 194
        on right: 173
    jump_statement (156)
        on left: 195 196 197 198
        on right: 174
    translation_unit (157)
        on left: 199 200
        on right: 0 200
    external_declaration (158)
        on left: 201 202
        on right: 199 200
    function_definition (159)
        on left: 203
        on right: 201
    declaration_list_opt (160)
        on left: 204 205
        on right: 203
    declaration_list (161)
        on left: 206 207
        on right: 204 207


State 0

    0 $accept: • translation_unit $end

    EXTERN     shift, and go to state 1
    STATIC     shift, and go to state 2
    AUTO       shift, and go to state 3
    REGISTER   shift, and go to state 4
    VOID       shift, and go to state 5
    CHAR       shift, and go to state 6
    SHORT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    FLOAT      shift, and go to state 10
    DOUBLE     shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    BOOL       shift, and go to state 14
    COMPLEX    shift, and go to state 15
    IMAGINARY  shift, and go to state 16
    CONST      shift, and go to state 17
    RESTRICT   shift, and go to state 18
    VOLATILE   shift, and go to state 19
    INLINE     shift, and go to state 20
    ENUM       shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    translation_unit         go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31


State 1

   93 storage_class_specifier: EXTERN •

    $default  reduce using rule 93 (storage_class_specifier)


State 2

   94 storage_class_specifier: STATIC •

    $default  reduce using rule 94 (storage_class_specifier)


State 3

   95 storage_class_specifier: AUTO •

    $default  reduce using rule 95 (storage_class_specifier)


State 4

   96 storage_class_specifier: REGISTER •

    $default  reduce using rule 96 (storage_class_specifier)


State 5

   97 type_specifier: VOID •

    $default  reduce using rule 97 (type_specifier)


State 6

   98 type_specifier: CHAR •

    $default  reduce using rule 98 (type_specifier)


State 7

   99 type_specifier: SHORT •

    $default  reduce using rule 99 (type_specifier)


State 8

  100 type_specifier: INT •

    $default  reduce using rule 100 (type_specifier)


State 9

  101 type_specifier: LONG •

    $default  reduce using rule 101 (type_specifier)


State 10

  102 type_specifier: FLOAT •

    $default  reduce using rule 102 (type_specifier)


State 11

  103 type_specifier: DOUBLE •

    $default  reduce using rule 103 (type_specifier)


State 12

  104 type_specifier: SIGNED •

    $default  reduce using rule 104 (type_specifier)


State 13

  105 type_specifier: UNSIGNED •

    $default  reduce using rule 105 (type_specifier)


State 14

  106 type_specifier: BOOL •

    $default  reduce using rule 106 (type_specifier)


State 15

  107 type_specifier: COMPLEX •

    $default  reduce using rule 107 (type_specifier)


State 16

  108 type_specifier: IMAGINARY •

    $default  reduce using rule 108 (type_specifier)


State 17

  123 type_qualifier: CONST •

    $default  reduce using rule 123 (type_qualifier)


State 18

  124 type_qualifier: RESTRICT •

    $default  reduce using rule 124 (type_qualifier)


State 19

  125 type_qualifier: VOLATILE •

    $default  reduce using rule 125 (type_qualifier)


State 20

  126 function_specifier: INLINE •

    $default  reduce using rule 126 (function_specifier)


State 21

  114 enum_specifier: ENUM • identifier_opt LEFT_CURLY_BRACE enumerator_list RIGHT_CURLY_BRACE
  115               | ENUM • identifier_opt LEFT_CURLY_BRACE enumerator_list COMMA RIGHT_CURLY_BRACE
  116               | ENUM • IDENTIFIER

    IDENTIFIER  shift, and go to state 32

    $default  reduce using rule 118 (identifier_opt)

    identifier_opt  go to state 33


State 22

  202 external_declaration: declaration •

    $default  reduce using rule 202 (external_declaration)


State 23

   80 declaration: declaration_specifiers • init_declarator_list_opt SEMICOLON
  203 function_definition: declaration_specifiers • declarator declaration_list_opt compound_statement

    ASTERISK  shift, and go to state 34

    SEMICOLON  reduce using rule 82 (init_declarator_list_opt)
    $default   reduce using rule 129 (pointer_opt)

    init_declarator_list_opt  go to state 35
    init_declarator_list      go to state 36
    init_declarator           go to state 37
    declarator                go to state 38
    pointer_opt               go to state 39
    pointer                   go to state 40


State 24

   83 declaration_specifiers: storage_class_specifier • declaration_specifiers_opt

    EXTERN     shift, and go to state 1
    STATIC     shift, and go to state 2
    AUTO       shift, and go to state 3
    REGISTER   shift, and go to state 4
    VOID       shift, and go to state 5
    CHAR       shift, and go to state 6
    SHORT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    FLOAT      shift, and go to state 10
    DOUBLE     shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    BOOL       shift, and go to state 14
    COMPLEX    shift, and go to state 15
    IMAGINARY  shift, and go to state 16
    CONST      shift, and go to state 17
    RESTRICT   shift, and go to state 18
    VOLATILE   shift, and go to state 19
    INLINE     shift, and go to state 20
    ENUM       shift, and go to state 21

    $default  reduce using rule 88 (declaration_specifiers_opt)

    declaration_specifiers      go to state 41
    declaration_specifiers_opt  go to state 42
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 25

   84 declaration_specifiers: type_specifier • declaration_specifiers_opt

    EXTERN     shift, and go to state 1
    STATIC     shift, and go to state 2
    AUTO       shift, and go to state 3
    REGISTER   shift, and go to state 4
    VOID       shift, and go to state 5
    CHAR       shift, and go to state 6
    SHORT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    FLOAT      shift, and go to state 10
    DOUBLE     shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    BOOL       shift, and go to state 14
    COMPLEX    shift, and go to state 15
    IMAGINARY  shift, and go to state 16
    CONST      shift, and go to state 17
    RESTRICT   shift, and go to state 18
    VOLATILE   shift, and go to state 19
    INLINE     shift, and go to state 20
    ENUM       shift, and go to state 21

    $default  reduce using rule 88 (declaration_specifiers_opt)

    declaration_specifiers      go to state 41
    declaration_specifiers_opt  go to state 43
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 26

  109 type_specifier: enum_specifier •

    $default  reduce using rule 109 (type_specifier)


State 27

   85 declaration_specifiers: type_qualifier • declaration_specifiers_opt

    EXTERN     shift, and go to state 1
    STATIC     shift, and go to state 2
    AUTO       shift, and go to state 3
    REGISTER   shift, and go to state 4
    VOID       shift, and go to state 5
    CHAR       shift, and go to state 6
    SHORT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    FLOAT      shift, and go to state 10
    DOUBLE     shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    BOOL       shift, and go to state 14
    COMPLEX    shift, and go to state 15
    IMAGINARY  shift, and go to state 16
    CONST      shift, and go to state 17
    RESTRICT   shift, and go to state 18
    VOLATILE   shift, and go to state 19
    INLINE     shift, and go to state 20
    ENUM       shift, and go to state 21

    $default  reduce using rule 88 (declaration_specifiers_opt)

    declaration_specifiers      go to state 41
    declaration_specifiers_opt  go to state 44
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 28

   86 declaration_specifiers: function_specifier • declaration_specifiers_opt

    EXTERN     shift, and go to state 1
    STATIC     shift, and go to state 2
    AUTO       shift, and go to state 3
    REGISTER   shift, and go to state 4
    VOID       shift, and go to state 5
    CHAR       shift, and go to state 6
    SHORT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    FLOAT      shift, and go to state 10
    DOUBLE     shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    BOOL       shift, and go to state 14
    COMPLEX    shift, and go to state 15
    IMAGINARY  shift, and go to state 16
    CONST      shift, and go to state 17
    RESTRICT   shift, and go to state 18
    VOLATILE   shift, and go to state 19
    INLINE     shift, and go to state 20
    ENUM       shift, and go to state 21

    $default  reduce using rule 88 (declaration_specifiers_opt)

    declaration_specifiers      go to state 41
    declaration_specifiers_opt  go to state 45
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 29

    0 $accept: translation_unit • $end
  200 translation_unit: translation_unit • external_declaration

    $end       shift, and go to state 46
    EXTERN     shift, and go to state 1
    STATIC     shift, and go to state 2
    AUTO       shift, and go to state 3
    REGISTER   shift, and go to state 4
    VOID       shift, and go to state 5
    CHAR       shift, and go to state 6
    SHORT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    FLOAT      shift, and go to state 10
    DOUBLE     shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    BOOL       shift, and go to state 14
    COMPLEX    shift, and go to state 15
    IMAGINARY  shift, and go to state 16
    CONST      shift, and go to state 17
    RESTRICT   shift, and go to state 18
    VOLATILE   shift, and go to state 19
    INLINE     shift, and go to state 20
    ENUM       shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    external_declaration     go to state 47
    function_definition      go to state 31


State 30

  199 translation_unit: external_declaration •

    $default  reduce using rule 199 (translation_unit)


State 31

  201 external_declaration: function_definition •

    $default  reduce using rule 201 (external_declaration)


State 32

  116 enum_specifier: ENUM IDENTIFIER •
  117 identifier_opt: IDENTIFIER •

    LEFT_CURLY_BRACE  reduce using rule 117 (identifier_opt)
    $default          reduce using rule 116 (enum_specifier)


State 33

  114 enum_specifier: ENUM identifier_opt • LEFT_CURLY_BRACE enumerator_list RIGHT_CURLY_BRACE
  115               | ENUM identifier_opt • LEFT_CURLY_BRACE enumerator_list COMMA RIGHT_CURLY_BRACE

    LEFT_CURLY_BRACE  shift, and go to state 48


State 34

  144 pointer: ASTERISK • type_qualifier_list_opt
  145        | ASTERISK • type_qualifier_list_opt pointer

    CONST     shift, and go to state 17
    RESTRICT  shift, and go to state 18
    VOLATILE  shift, and go to state 19

    $default  reduce using rule 139 (type_qualifier_list_opt)

    type_qualifier           go to state 49
    type_qualifier_list_opt  go to state 50
    type_qualifier_list      go to state 51


State 35

   80 declaration: declaration_specifiers init_declarator_list_opt • SEMICOLON

    SEMICOLON  shift, and go to state 52


State 36

   81 init_declarator_list_opt: init_declarator_list •
   90 init_declarator_list: init_declarator_list • COMMA init_declarator

    COMMA  shift, and go to state 53

    $default  reduce using rule 81 (init_declarator_list_opt)


State 37

   89 init_declarator_list: init_declarator •

    $default  reduce using rule 89 (init_declarator_list)


State 38

   91 init_declarator: declarator •
   92                | declarator • EQUAL_TO initializer
  203 function_definition: declaration_specifiers declarator • declaration_list_opt compound_statement

    EXTERN     shift, and go to state 1
    STATIC     shift, and go to state 2
    AUTO       shift, and go to state 3
    REGISTER   shift, and go to state 4
    VOID       shift, and go to state 5
    CHAR       shift, and go to state 6
    SHORT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    FLOAT      shift, and go to state 10
    DOUBLE     shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    BOOL       shift, and go to state 14
    COMPLEX    shift, and go to state 15
    IMAGINARY  shift, and go to state 16
    CONST      shift, and go to state 17
    RESTRICT   shift, and go to state 18
    VOLATILE   shift, and go to state 19
    INLINE     shift, and go to state 20
    ENUM       shift, and go to state 21
    EQUAL_TO   shift, and go to state 54

    LEFT_CURLY_BRACE  reduce using rule 205 (declaration_list_opt)
    $default          reduce using rule 91 (init_declarator)

    declaration              go to state 55
    declaration_specifiers   go to state 56
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    declaration_list_opt     go to state 57
    declaration_list         go to state 58


State 39

  127 declarator: pointer_opt • direct_declarator

    IDENTIFIER        shift, and go to state 59
    LEFT_PARENTHESES  shift, and go to state 60

    direct_declarator  go to state 61


State 40

  128 pointer_opt: pointer •

    $default  reduce using rule 128 (pointer_opt)


State 41

   87 declaration_specifiers_opt: declaration_specifiers •

    $default  reduce using rule 87 (declaration_specifiers_opt)


State 42

   83 declaration_specifiers: storage_class_specifier declaration_specifiers_opt •

    $default  reduce using rule 83 (declaration_specifiers)


State 43

   84 declaration_specifiers: type_specifier declaration_specifiers_opt •

    $default  reduce using rule 84 (declaration_specifiers)


State 44

   85 declaration_specifiers: type_qualifier declaration_specifiers_opt •

    $default  reduce using rule 85 (declaration_specifiers)


State 45

   86 declaration_specifiers: function_specifier declaration_specifiers_opt •

    $default  reduce using rule 86 (declaration_specifiers)


State 46

    0 $accept: translation_unit $end •

    $default  accept


State 47

  200 translation_unit: translation_unit external_declaration •

    $default  reduce using rule 200 (translation_unit)


State 48
